Fixed clipping issue homepage

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -15,7 +15,7 @@
 .aboutpage p {
   white-space: normal;
 }
-.content {
+.about-content {
   display: flex;
   justify-content: space-between;
 }
