--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -7,9 +7,8 @@
 }
 
 .home-content-container {
-  height: 100vh;
+  min-height: 100vh;
   align-items: center;
-  display: inline-block;
 }
 
 .photo {
